# dc-data-lineage-code

dc-data-lineage-code/action-to-tables-columns-sps-flows/: ACTION_TO_ENDPOINTS_TABLES_MAPPING.sql  ACTION_TO_ENDPOINTS_TABLES_MAPPING_V.sql  action_table_column_mapping.csv  action_to_base_table.sql  action_to_table.py  main.py
dc-data-lineage-code/mcp-with-snowflake-for-claude/: README.md  config_snowflake.yaml  main.py  mcp_config.json  mcp_snowflake_server.py  pyproject.toml  requirements_mcp.txt
dc-data-lineage-code/mcp-with-snowflake-for-claude/tests/: test_architecture_tables.py  test_mcp_handlers.py  test_mcp_server.py
dc-data-lineage-code/prefect-repo-reference-to-tables-columns/: PREFECT_REFERENCE_WITH_TABLES_COLUMNS_V.sql  README.md  clone_prefect_repos.py  table_column_reference_with_prefect_repos.py  table_column_references_with_prefect_repos.csv
dc-data-lineage-code/sp-parser-with-llm/: SP_TABLE_COLUMN_MAPPING_V.sql  sp_analysis_complete.csv  sp_analyzer.py
dc-data-lineage-code/toughtspot-to-table/: prod_liveboard_analysis_20251104_162800.csv  thoughtspot_to_table_analysis.py  toughtspot_v.sql
dc-data-lineage-code/view-to-source-column-lineage/: table-view-parser-data-mapper.sql
dc-data-lineage-code/view-to-source-column-lineage/modular-code-view-to-column-lineage/: README.md  column_lineage_analysis.csv  column_resolver.py  config.py  csv_generator.py  cte_analyzer.py  database_connection.py  ddl_structure_analyzer.py  expression_analyzer.py  init.py  integrated_parser.py  main.py  pyproject.toml  requirements.txt  view_names.txt
(+29 files in other folders)
