[project]
name = "mcp-with-snowflake-for-claude"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.74",
    "hvac>=2.4.0",
    "mcp>=1.21.2",
    "pandas>=2.3.3",
    "snowflake-sqlalchemy>=1.7.7",
    "sqlalchemy>=2.0.44",
]
